# fsstudio

./: CMakeLists.txt
cmake/: Macdeployqt.cmake  Windeployqt.cmake
src/: CMakeLists.txt
